<resources>
    <string name="app_name">Skivvy</string>
    <string name="hello">Hello</string>
    <string name="mic_open_caption">Command</string>
    <string name="recognize_error">I didn\'t get it.&#160;</string>
    <string name="no_input">You didn\'t say anything.</string>
    <string name="theme">Theme</string>
    <string name="percent">%</string>
    <string name="bottom_sheet_behavior" translatable="false">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string-array name="acceptances">
        <item>yeah</item>
        <item>yups</item>
        <item>yes</item>
        <item>yep</item>
        <item>yup</item>
        <item>yo</item>
    </string-array>
    <string-array name="allowances">
        <item>proceed</item>
        <item>allowed</item>
        <item>sure</item>
        <item>do it</item>
    </string-array>
    <string-array name="denials">
        <item>do not</item>
        <item>nopes</item>
        <item>nope</item>
        <item>don\'t</item>
        <item>stop</item>
        <item>nah</item>
        <item>no</item>
    </string-array>
    <string-array name="initiators">
        <item>turn on</item>
        <item>initiate</item>
        <item>enable</item>
        <item>open</item>
        <item>start</item>
        <item> on </item>
    </string-array>
    <string-array name="finishers">
        <item>turn off</item>
        <item>disable</item>
        <item>close</item>
        <item>stop</item>
        <item>end</item>
        <item>off</item>
    </string-array>
    <string-array name="disruptions">
        <item>discard</item>
        <item>nothing</item>
        <item>cancel</item>
        <item>stop</item>
    </string-array>
    <string-array name="setup_list">
        <item>skivvy settings</item>
        <item>your settings</item>
        <item>setup</item>
        <item>set up</item>
    </string-array>
    <string-array name="wifi_list">
        <item>wireless fidelity</item>
        <item>wi-fi</item>
        <item>wi fi</item>
        <item>wifi</item>
    </string-array>
    <string-array name="gps_list">
        <item>global positioning system</item>
        <item>location</item>
        <item>gps</item>
    </string-array>
    <string-array name="lock_list">
        <item>lockup</item>
        <item>lock up</item>
        <item>sleep</item>
        <item>lock</item>
    </string-array>
    <string-array name="snap_list">
        <item>screenshot</item>
        <item>snapshot</item>
    </string-array>
    <string name="exit" translatable="false">bye</string>
    <string name="device_admin_request">I need to be a device admin to lock screen</string>
    <string name="device_admin_persuation">Activate Skivvy as a device admin to lock screen on your command. Don\'t worry, Skivvy is safe and will never harm your device in any way.</string>
    <string name="speech_activation_button" translatable="false">button</string>
    <string name="do_u_want_open">Do you want me to open&#160;</string>
    <string name="opening">Opening&#160;\n</string>
    <string name="gps_enabled">All satellites on you now</string>
    <string name="gps_is_off">GPS not enabled</string>
    <string name="bt_off">Bluetooth is off</string>
    <string name="bt_on">Bluetooth is on</string>
    <string name="wifi_off">Turned Wi-Fi off</string>
    <string name="wifi_on">Wi-Fi is looking for available hot spots</string>
    <string name="screen_locked">Locked</string>
    <string name="internal_error">Internal error</string>
    <string name="snap_success">Screenshot taken</string>
    <string name="snap_failed">Can\'t take screenshot.</string>
    <string name="exit_msg">Bye!</string>
    <string name="okay">Okay</string>
    <string name="null_variable_error">Sorry, I forgot your command.</string>
    <string name="error">Error</string>
    <string name="language_not_supported">The Language specified is not supported.</string>
    <string name="output_error">Error in speaking.</string>
    <string name="call_permit_denied">You didn\'t allow me to make calls.</string>
    <string name="should_i_call">Shall I call&#160;</string>
    <string name="storage_permission_denied">You didn\'t allow me to store screenshots on device.</string>
    <string name="contact_permission_denied">You didn\'t allow me to access your contacts.</string>
    <string name="unmute_text">Un-mute speech output</string>
    <string name="mute_text">Mute speech output</string>
    <string name="activate_training_text">Activate training mode</string>
    <string name="deactivate_training_text">Deactivate training mode</string>
    <string name="disable_fingerprint">Disable biometrics</string>
    <string name="enable_fingerprint">Enable biometrics</string>
    <string name="auth_demand_title">Skivvy Access Demand</string>
    <string name="auth_demand_subtitle">I need your fingerprint.</string>
    <string name="other_auth_ops">Use account password</string>
    <string name="require_physical_permission">I need your physical permission</string>
    <string name="i_am">I am&#160;</string>
    <string name="coming_soon">Coming soon</string>
    <string name="calling">Calling&#160;</string>
    <string name="app_tag_line">An experiment of Priyanshu Ranjan</string>
    <string name="call">call</string>
    <string-array name="calls">
        <item>call to</item>
        <item>call</item>
    </string-array>
    <string name="email">email</string>
    <string-array name="emails">
        <item>e-mail to</item>
        <item>email to</item>
        <item>e-mail</item>
        <item>email</item>
    </string-array>
    <string name="text">text</string>
    <string-array name="texts">
        <item>message to</item>
        <item>message</item>
        <item>text to</item>
        <item>text</item>
    </string-array>
    <string name="device_admin_failure">You didn\'t activate me as a device admin.</string>
    <string name="contact_not_found">No such contact.</string>
    <string name="no_contacts_available">You seem to have no contacts.</string>
    <string name="should_i_email">Shall I email&#160;</string>
    <string name="invalid_call_request">Invalid call request.</string>
    <string name="invalid_email_request">Invalid email address.</string>
    <string name="you_dont_seem_having">You don\'t seem to have&#160;</string>
    <string name="someone_email_address">\'s email address.</string>
    <string name="someones_phone_number">\'s phone number.</string>
    <string name="what_is_subject">What is the subject?</string>
    <string name="subject_added">Subject added.&#160;</string>
    <string name="what_is_body">What\'s the body?</string>
    <string name="body_added">Body added.&#160;</string>
    <string name="preparing_email">Preparing email to send.</string>
    <string name="biometric_auth_explanation">Authenticate yourself to proceed further.
        This is required when you are about to perform a sensitive action directly affecting Skivvy\'s functions, or your real life.</string>
    <string name="invalid_expression">Invalid expression.</string>
    <string name="what_is_message">What\'s the message?</string>
    <string name="should_i_text">Shall I text&#160;</string>
    <string name="via_sms">&#160;via SMS?</string>
    <string name="sending_sms_at">Sending SMS at&#160;</string>
    <string name="discard" translatable="false">Discard</string>
    <string name="voice_output_on">Already speaking</string>
    <string name="biometric_already_on">Biometric is already enabled</string>
    <string name="biometric_on">Biometric authentication enabled</string>
    <string name="biometric_enable_error">I couldn\'t enable biometric.</string>
    <string name="biometric_already_off">Biometric is already disabled</string>
    <string name="physical_auth_request">I need your physical authentication</string>
    <string name="have_all_permits">I have all the permissions that I need from you.</string>
    <string name="biometric_is_off">Biometric authentication disabled</string>
    <string name="biometric_off_error">I couldn\'t disable biometric.</string>
    <string name="verification_unsuccessfull">I could not verify you.</string>
    <string name="back_drop" translatable="false">Back drop</string>
    <string name="setting_icon" translatable="false">Setting Icon</string>
    <string name="back_of_setting_icon" translatable="false">Back of setting icon</string>
    <string name="current_process_image" translatable="false">Current process image</string>
    <string name="breathing_skivvy" translatable="false">Breathing skivvy</string>
    <string name="command_button" translatable="false">Command button</string>
    <string name="speaking_indicator" translatable="false">Speaking indicator</string>
    <string name="say_something">What\'s on your mind?</string>
    <string name="tap_the_button">Tap the button</string>
    <string name="im_ready">I\'m ready.</string>
    <string name="sms_permit_denied">You didn\'t allow me to send SMS.</string>
    <string name="enable_vocal_authentication">Enable vocal authentication</string>
    <string name="disable_vocal_authentication">Disable vocal authentication</string>
    <string name="set_new_secret_phrase">Set new secret phrase</string>
    <string name="reset_secret_phrase">Reset your secret phrase</string>
    <string name="tell_new_secret_phrase">Tell me your secret phrase or word</string>
    <string name="confirmation_phrase_didnt_match">Confirmation phrase didn\'t match the phrase you\'ve set.</string>
    <string name="biometric_recommendation_passphrase_enabling">I recommend enabling biometric too, in case you forget the passphrase.</string>
    <string name="reset">Reset</string>
    <string name="enable_or_disable">Enable or Disable?</string>
    <string name="vocal_auth_off_error">I could not disable vocal authentication.</string>
    <string name="generic_voice_rec_text">I\'m listening</string>
    <string name="grant_permissions">Grant permissions</string>
    <string name="make_device_admin">Device admin</string>
    <string name="device_admin_success">Thanks for making me your device admin.</string>
    <string name="reset_voice_auth_confirm">Confirm to reset and disable vocal authentication?</string>
    <string name="traning_title" translatable="false">Training</string>
    <string name="optimal_volume" translatable="false">40%</string>
    <string name="parallel_receive_text">I\'ll listen while speaking</string>
    <string name="queued_receive_text">I\'ll listen after speaking</string>
    <string name="set_parallel_receive">Set listening while speaking</string>
    <string name="set_queued_receive">Set listening after speaking</string>
    <string name="muted">Muted.</string>
    <string name="speaking">Speaking.</string>
    <string name="voice_auth_enabled" translatable="false">Voice auth enabled.</string>
    <string name="voice_auth_disabled" translatable="false">Voice auth disabled.</string>
    <string name="light_theme_set" translatable="false">This is light theme</string>
    <string name="dark_theme_set" translatable="false">This is dark theme</string>
    <string name="fingerprint_is_on">Fingerprint enabled.</string>
    <string name="recognition_service_error">Error in speech recognition.</string>
    <string-array name="notification_channel">
        <item>SKIVVY_MAIN_NOTIFICATION</item>
        <item>Skivvy is active</item>
        <item>To notify you that Skivvy is active in background.</item>
    </string-array>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="configure" translatable="false">Configure</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="infinity" translatable="false">1000000000000000000000000000000000000000000000</string>
    <string name="passphrase_text">Passphrase</string>
    <string name="auth_failed">Authentication failed</string>
</resources>