<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/base_background_color"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/backdrop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="18dp"
        android:contentDescription="@string/back_drop"
        android:elevation="16dp"
        app:layout_constraintBottom_toTopOf="@id/textInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/view_bottom_round" />

    <include
        android:id="@+id/greeting"
        layout="@layout/text_button_image_chip"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/app_name"
        android:layout_margin="@dimen/minimum_separation"
        android:textColor="?attr/tertiary_text_color"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/setting"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="@dimen/minimum_separation"
        android:background="@android:color/transparent"
        android:padding="4dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/setting_icon"
        android:elevation="22dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@id/greeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/greeting"
        app:layout_constraintTop_toTopOf="@id/greeting"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/ic_setting" />


    <TextView
        android:id="@+id/textOutput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="16dp"
        android:gravity="start"
        android:text="@string/no_input"
        android:textColor="?attr/secondary_text_color"
        android:textSize="52dp"
        app:layout_constraintEnd_toEndOf="@+id/setting"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/greeting"
        app:layout_constraintTop_toBottomOf="@id/greeting"
        tools:ignore="SpUsage" />

    <ImageView
        android:id="@+id/actionIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/current_process_image"
        android:elevation="18dp"
        app:layout_constraintBottom_toBottomOf="@id/loader"
        app:layout_constraintEnd_toEndOf="@id/loader"
        app:layout_constraintStart_toStartOf="@id/loader"
        app:layout_constraintTop_toTopOf="@id/loader" />

    <ImageView
        android:id="@+id/loader"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:contentDescription="@string/breathing_skivvy"
        android:elevation="16dp"
        app:layout_constraintBottom_toBottomOf="@id/backdrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedbackOutput"
        app:layout_constraintVertical_bias="1"
        app:srcCompat="@drawable/dots_in_circle" />

    <TextView
        android:id="@+id/feedbackOutput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="22dp"
        android:gravity="start|bottom"
        android:text="@string/biometric_auth_explanation"
        android:textColor="?attr/secondary_text_color"
        android:textSize="@dimen/smallest_text_size"
        android:paddingVertical="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textOutput"
        app:layout_constraintStart_toStartOf="@+id/textOutput"
        app:layout_constraintTop_toBottomOf="@+id/textOutput" />
    <TextView
        android:id="@+id/textInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="22dp"
        android:gravity="end"
        android:padding="12dp"
        android:textColor="?attr/base_text_color"
        android:text="Say someting"
        android:textStyle="bold"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintBottom_toBottomOf="@id/receiverBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/receiverBtn"
        app:layout_constraintTop_toTopOf="@id/receiverBtn"
        app:layout_constraintVertical_bias="0.5" />

    <ImageButton
        android:id="@+id/receiverBtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="12dp"
        android:background="@drawable/button_circle"
        android:contentDescription="@string/command_button"
        android:elevation="22dp"
        android:paddingTop="12dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backdrop"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/ic_mic" />

</androidx.constraintlayout.widget.ConstraintLayout>