<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/dead_blue"
    tools:context=".Setup">

    <ImageView
        android:id="@+id/settingIcon"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_margin="@dimen/base_separation"
        android:contentDescription="@string/setting_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_settings_icon" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingIcon">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/trainingModeBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/base_separation"
                android:background="@drawable/spruce_square_round_button"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="@dimen/minimum_separation"
                android:textColor="?attr/base_text_color"
                android:textSize="@dimen/normal_text_size"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/muteUnmuteBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/base_separation"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="@dimen/minimum_separation"
                android:textColor="?attr/base_text_color"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trainingModeBtn" />

            <TextView
                android:id="@+id/biometricsBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/base_separation"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="@dimen/minimum_separation"
                android:textColor="?attr/base_text_color"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/muteUnmuteBtn" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/version"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="?attr/secondary_text_color"
        android:textSize="@dimen/smallest_text_size"
        app:layout_constraintBottom_toTopOf="@id/end_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1" />

    <TextView
        android:id="@+id/end_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/minimum_separation"
        android:gravity="center"
        android:text="@string/app_tag_line"
        android:textColor="?attr/secondary_text_color"
        android:textSize="@dimen/smallest_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1" />
</androidx.constraintlayout.widget.ConstraintLayout>